--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -6,6 +6,8 @@ on:
   workflow_dispatch:
 
 jobs:
+  permissions:
+    contents: write 
   build:
     runs-on: ubuntu-latest
     name: generate-github-profile-3d-contrib
