--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -23,4 +23,5 @@ jobs:
           git config user.email github-actions@github.com
           git add -A .
           git commit -m "generated"
+          git pull origin master
           git push
