--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -6,11 +6,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  permissions:
-    contents: write 
   build:
     runs-on: ubuntu-latest
     name: generate-github-profile-3d-contrib
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
@@ -22,6 +22,6 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add -A .
-          git commit -m "generated"
-          git pull origin master
-          git push
+          git commit -m "generated" || echo "No changes to commit"
+          git pull origin master  # Pull the latest changes before pushing
+          git push origin master
