--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -2,7 +2,7 @@ name: GitHub-Profile-3D-Contrib
 
 on:
   schedule:
-    - cron: "0 15 * * *" 
+    - cron: "0 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -17,11 +17,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
-      - name: Commit & Push
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add -A .
-          git commit -m "generated" || echo "No changes to commit"
-          git pull origin master --rebase  # Pull the latest changes before pushing
-          git push origin master
+    #  - name: Commit & Push
+     #   run: |
+      #    git config user.name github-actions
+       #   git config user.email github-actions@github.com
+        #  git add -A .
+         # git commit -m "generated" || echo "No changes to commit"
+          #git pull origin master --rebase  # Pull the latest changes before pushing
+          #git push origin master
